# ishan-posttraining

./: .dockerignore  .gitignore  Dockerfile  README.md  docker_push.sh  main.py  pyproject.toml  run_experiment.sh  train.py  train.sh
configs/: grpo_qwen_1.5b_math.yaml  sft_qwen_1.5b.yaml  smoke__grpo_qwen_1.5b_math.yaml  smoke__sft_qwen_1.5b.yaml
rewards/: __init__.py  exact.py
trainers/: grpo.py  sft.py
