[project]
name = "ishan-posttraining"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "trl",
    "transformers",
    "accelerate",
    "peft",
    "datasets",
    "wandb",
    "pyyaml",
    "loguru",
    "python-dotenv",
]
